--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "highcharts": "^8.1.2",
     "html-webpack-plugin": "3.2.0",
     "jest": "20.0.4",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.15",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
@@ -37,7 +37,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^1.1.5",
     "react-select": "^1.2.1",
     "redux": "^3.0.0",
     "redux-logger": "^3.0.6",
@@ -45,7 +45,7 @@
     "style-loader": "0.23.0",
     "sw-precache-webpack-plugin": "0.11.5",
     "url-loader": "1.1.1",
-    "webpack": "^4.44.1",
+    "webpack": "4.17.1",
     "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "2.0.3",
     "whatwg-fetch": "2.0.3"
