Catch master up to piping data to context and PLHIVAge
Squashed commit of the following:

commit dca08626bf32b7363fc023507ffae8f8797fee80
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Mon Aug 17 19:24:15 2020 -0400

    link to proto

commit 34fa1092ee063feda1c3d1cf32968f09ec230121
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Mon Aug 17 19:19:21 2020 -0400

    fold HIVSTs distributed into forecast chart

commit 9b7db6391dddee292f0755928af5d78db5b0c43c
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Mon Aug 17 18:51:50 2020 -0400

    plhivage data fed to chart. buggy in terms of flow, though

commit d4a7b52a63395bbb4ad7c73f8fda0061521fcc3c
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Mon Aug 17 15:39:54 2020 -0400

    querying for plhiv_age

commit e54ebd001a182c87b5138e52de45a3373bc6f60c
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Fri Aug 14 19:23:29 2020 -0400

    extract charts data to CHARTS.js

commit 2b266c0430e0fc11d339286ce3573fc9a31296b2
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Fri Aug 14 18:52:21 2020 -0400

    grouping indicators by chart

commit 9c22ceb18b6ae104a4ff66c9c1d4e5aca2931e16
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Fri Aug 14 18:06:19 2020 -0400

    data flow working for pop

commit 9d85ee5af8db8698d8efcc4591175605b01e6dbc
Author: Josh Maas-Howard <j.maas.howard@gmail.com>
Date:   Thu Aug 13 18:57:21 2020 -0400

    routing by country, debugging api call for population

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,8 +22,8 @@
           "name": "Launch localhost",
           "type": "chrome",
           "request": "launch",
-          "url": "http://localhost:3001",
-          "webRoot": "${workspaceFolder}/wwwroot"
+          "url": "http://localhost:3000",
+          "webRoot": "${workspaceFolder}/"
       },
       {
           "name": "Launch index.html",
