--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "20.0.4",
     "lodash": "^4.17.15",
-    "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
@@ -52,8 +51,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "build-css": "sass src:src --no-source-map",
+    "watch-css": "sass --watch src:src",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
@@ -67,7 +66,10 @@
     "eslint-plugin-flowtype": "^2.33.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1"
+    "eslint-plugin-react": "^7.0.1",
+    "firebase-tools": "^13.19.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "sass": "^1.79.3"
   },
   "jest": {
     "collectCoverageFrom": [
